test/libyul/yulSyntaxTests/builtin_identifier_6.yul
{
	add := 1
}
// ----
// ParserError 6272: (7-9): Cannot assign to builtin function "add".
